--- a/index.html
+++ b/index.html
@@ -3,71 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QR Code Generator</title>
+    <title>vCard QR Code Generator</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
             padding: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            max-width: 600px;
+            margin: 0 auto;
         }
-        form {
-            display: flex;
-            flex-direction: column;
-            max-width: 300px;
+        h1 {
+            text-align: center;
         }
-        label {
-            margin-top: 10px;
-        }
-        input, select {
-            margin-top: 5px;
-            padding: 8px;
-            font-size: 1rem;
-        }
-        button {
-            margin-top: 20px;
-            padding: 10px;
-            font-size: 1rem;
-            background-color: #007BFF;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-        img {
-            margin-top: 20px;
+        #qrcode {
+            margin: 20px auto;
+            display: block;
         }
     </style>
 </head>
 <body>
+    <h1>vCard QR Code Generator</h1>
+    <div id="qrcode"></div>
 
-    <h1>QR Code Generator</h1>
-    <form id="qrForm">
-        <label for="data">Data (URL/Text):</label>
-        <input type="text" id="data" name="data" required>
+    <script src="https://cdn.jsdelivr.net/npm/qrcode@1.4.4/build/qrcode.min.js"></script>
+    <script>
+        // Sample vCard data (replace with your own)
+        const vcardData = `
+            BEGIN:VCARD
+            VERSION:3.0
+            N:Doe;Jane;;;
+            FN:Jane Doe
+            ORG:Acme Inc.
+            TITLE:CEO
+            TEL;TYPE=WORK,VOICE:(555) 555-5555
+            TEL;TYPE=CELL,VOICE:(555) 555-1234
+            ADR;TYPE=WORK:;;1234 Elm Street;Hometown;ST;12345;USA
+            EMAIL:jane.doe@example.com
+            URL:http://www.acmeinc.com
+            END:VCARD
+        `;
 
-        <label for="size">Size:</label>
-        <input type="number" id="size" name="size" value="300" required>
+        // Function to generate QR code
+        function generateQRCode() {
+            const qrCodeDiv = document.getElementById('qrcode');
+            const qr = new QRCode(qrCodeDiv, {
+                text: vcardData.trim(),
+                width: 256,
+                height: 256,
+                colorDark: '#000000',
+                colorLight: '#ffffff',
+                correctLevel: QRCode.CorrectLevel.L // Error correction level
+            });
+        }
 
-        <label for="body">Body Style:</label>
-        <select id="body" name="body">
-            <option value="square">Square</option>
-            <option value="circle">Circle</option>
-            <!-- Add other body styles here -->
-        </select>
-
-        <label for="logo">Logo URL:</label>
-        <input type="url" id="logo" name="logo">
-
-        <button type="submit">Generate QR Code</button>
-    </form>
-
-    <img id="qrCode" src="" alt="QR Code will appear here">
-
-    <script src="script.js"></script>
+        // Generate QR code on page load
+        document.addEventListener('DOMContentLoaded', generateQRCode);
+    </script>
 </body>
 </html>
