--- a/index.html
+++ b/index.html
@@ -35,7 +35,18 @@
                     <label for="email">Email</label>
                     <input type="email" class="form-control" id="email">
                 </div>
-                <!-- Add more fields as needed -->
+                <div class="form-group">
+                    <label for="url">URL</label>
+                    <input type="url" class="form-control" id="url">
+                </div>
+                <div class="form-group">
+                    <label for="address">Address</label>
+                    <input type="text" class="form-control" id="address">
+                </div>
+                <div class="form-group">
+                    <label for="designation">Designation</label>
+                    <input type="text" class="form-control" id="designation">
+                </div>
             </div>
             <button type="button" class="btn btn-primary" onclick="generateQRCode()">Generate QR Code</button>
         </form>
