--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <form id="qrForm" class="mb-4">
             <div class="form-group">
                 <label for="type">Choose Type</label>
-                <select class="form-control" id="type">
+                <select class="form-control" id="type" required>
                     <option value="vCard">vCard</option>
                     <option value="MeCard">MeCard</option>
                 </select>
@@ -48,10 +48,11 @@
                     <input type="text" class="form-control" id="designation">
                 </div>
             </div>
-            <button type="button" class="btn btn-primary" onclick="generateQRCode()">Generate QR Code</button>
+            <button type="submit" class="btn btn-primary">Generate QR Code</button>
         </form>
         <div class="text-center">
             <div id="qrcode"></div>
+            <button id="downloadBtn" class="btn btn-success mt-3" style="display: none;">Download QR Code</button>
         </div>
     </div>
 
