--- a/index.html
+++ b/index.html
@@ -10,49 +10,53 @@
 <body>
     <div class="container">
         <h1 class="text-center my-4">Free QR Code Generator</h1>
-        <form id="qrForm" class="mb-4">
-            <div class="form-group">
-                <label for="type">Choose Type</label>
-                <select class="form-control" id="type" required>
-                    <option value="vCard">vCard</option>
-                    <option value="MeCard">MeCard</option>
-                </select>
+        <div class="row">
+            <div class="col-md-6">
+                <form id="qrForm" class="mb-4">
+                    <div class="form-group">
+                        <label for="type">Choose Type</label>
+                        <select class="form-control" id="type" required>
+                            <option value="vCard">vCard</option>
+                            <option value="MeCard">MeCard</option>
+                        </select>
+                    </div>
+                    <div id="vcard-fields">
+                        <div class="form-group">
+                            <label for="firstName">First Name</label>
+                            <input type="text" class="form-control" id="firstName">
+                        </div>
+                        <div class="form-group">
+                            <label for="lastName">Last Name</label>
+                            <input type="text" class="form-control" id="lastName">
+                        </div>
+                        <div class="form-group">
+                            <label for="phoneNumber">Phone Number</label>
+                            <input type="text" class="form-control" id="phoneNumber">
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="email" class="form-control" id="email">
+                        </div>
+                        <div class="form-group">
+                            <label for="url">URL</label>
+                            <input type="url" class="form-control" id="url">
+                        </div>
+                        <div class="form-group">
+                            <label for="address">Address</label>
+                            <input type="text" class="form-control" id="address">
+                        </div>
+                        <div class="form-group">
+                            <label for="designation">Designation</label>
+                            <input type="text" class="form-control" id="designation">
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Generate QR Code</button>
+                </form>
             </div>
-            <div id="vcard-fields">
-                <div class="form-group">
-                    <label for="firstName">First Name</label>
-                    <input type="text" class="form-control" id="firstName">
-                </div>
-                <div class="form-group">
-                    <label for="lastName">Last Name</label>
-                    <input type="text" class="form-control" id="lastName">
-                </div>
-                <div class="form-group">
-                    <label for="phoneNumber">Phone Number</label>
-                    <input type="text" class="form-control" id="phoneNumber">
-                </div>
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" class="form-control" id="email">
-                </div>
-                <div class="form-group">
-                    <label for="url">URL</label>
-                    <input type="url" class="form-control" id="url">
-                </div>
-                <div class="form-group">
-                    <label for="address">Address</label>
-                    <input type="text" class="form-control" id="address">
-                </div>
-                <div class="form-group">
-                    <label for="designation">Designation</label>
-                    <input type="text" class="form-control" id="designation">
-                </div>
+            <div class="col-md-6">
+                <div id="qrcode"></div>
+                <button id="downloadBtn" class="btn btn-success mt-3" style="display: none;">Download QR Code</button>
             </div>
-            <button type="submit" class="btn btn-primary">Generate QR Code</button>
-        </form>
-        <div class="text-center">
-            <div id="qrcode"></div>
-            <button id="downloadBtn" class="btn btn-success mt-3" style="display: none;">Download QR Code</button>
         </div>
     </div>
 
