--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <button type="submit" class="btn btn-primary">Generate QR Code</button>
                 </form>
             </div>
-            <div class="col-md-4 text-center" style="position: sticky;">
+            <div class="col-md-4 text-center">
                 <div id="qrcode"></div>
                 <button id="downloadBtn" class="btn btn-success mt-3" style="display: none;">Download QR Code</button>
             </div>
