--- a/index.html
+++ b/index.html
@@ -11,61 +11,37 @@
     <div class="container">
         <h1 class="text-center my-4">Free QR Code Generator</h1>
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-6">
                 <form id="qrForm" class="mb-4">
                     <div class="form-group">
                         <label for="type">Choose Type</label>
                         <select class="form-control" id="type" required>
                             <option value="vCard">vCard</option>
                             <option value="MeCard">MeCard</option>
+                            <option value="URL">URL</option>
+                            <option value="Text">Text</option>
+                            <option value="Email">Email</option>
+                            <option value="SMS">SMS</option>
+                            <option value="WIFI">WIFI</option>
+                            <option value="Bitcoin">Bitcoin</option>
+                            <option value="Twitter">Twitter</option>
+                            <option value="Facebook">Facebook</option>
+                            <option value="PDF">PDF</option>
+                            <option value="MP3">MP3</option>
+                            <option value="AppStores">App Stores</option>
+                            <option value="Images">Images</option>
+                            <option value="Barcodes">2D Barcodes</option>
                         </select>
                     </div>
-                    <div id="vcard-fields">
-                        <div class="form-group">
-                            <label for="firstName">First Name</label>
-                            <input type="text" class="form-control" id="firstName">
-                        </div>
-                        <div class="form-group">
-                            <label for="lastName">Last Name</label>
-                            <input type="text" class="form-control" id="lastName">
-                        </div>
-                        <div class="form-group">
-                            <label for="companyName">Company Name</label>
-                            <input type="text" class="form-control" id="companyName">
-                        </div>
-                        <div class="form-group">
-                            <label for="designation">Designation</label>
-                            <input type="text" class="form-control" id="designation">
-                        </div>
-                        <div class="form-group">
-                            <label for="phoneNumber">Phone Number</label>
-                            <input type="text" class="form-control" id="phoneNumber">
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Email</label>
-                            <input type="email" class="form-control" id="email">
-                        </div>
-                        <div class="form-group">
-                            <label for="url">Website</label>
-                            <input type="url" class="form-control" id="url">
-                        </div>
-                        <div class="form-group">
-                            <label for="socialMedia">Social Media URL</label>
-                            <input type="url" class="form-control" id="socialMedia">
-                        </div>
-                        <div class="form-group">
-                            <label for="address">Address</label>
-                            <input type="text" class="form-control" id="address">
-                        </div>
-                        <div class="form-group">
-                            <label for="note">Additional Note</label>
-                            <input type="text" class="form-control" id="note">
-                        </div>
+                    <div id="form-fields"></div>
+                    <div class="form-group">
+                        <label for="qrColor">QR Code Color</label>
+                        <input type="color" class="form-control" id="qrColor" value="#000000">
                     </div>
                     <button type="submit" class="btn btn-primary">Generate QR Code</button>
                 </form>
             </div>
-            <div class="col-md-4 text-center">
+            <div class="col-md-6 text-center">
                 <div id="qrcode"></div>
                 <button id="downloadBtn" class="btn btn-success mt-3" style="display: none;">Download QR Code</button>
             </div>
