--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+---
+layout: default
+
+title: Home
+---
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -112,7 +118,7 @@
                     </div>
                 </div>
                 <div class="footer mt-5">
-                    <p class="text-center">Made with <i class="fas fa-heart"></i> by <a href="https://codedthemes.com/" target="_blank">Codedthemes</a></p>
+                    <p class="text-center">Made with <i class="fas fa-heart"></i> by <a href="#" target="_blank">{{ site.myvariable }}</a></p>
                 </div>
             </div>
         </div>
