--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 ---
 layout: default
-title: Home
+title: "QR Code Generator by Ahmed Sharif Khan Noor"
+description: "Create custom QR codes easily with the QR Code Generator by Ahmed Sharif Khan Noor. Perfect for URLs, contact information, and more."
+keywords: "QR Code Generator, custom QR codes, Ahmed Sharif Khan Noor, generate QR codes, QR codes for URLs"
+author: "Ahmed Sharif Khan Noor"
 ---
+
     <div class="container-fluid mt-3">
         <div class="row">
             <div class="col-xl-12">
@@ -72,9 +76,6 @@ title: Home
                             </div>
                         </div><!-- /Row -->
                     </div>
-                </div>
-                <div class="footer mt-5">
-                    <p class="text-center">Made with <i class="fas fa-heart"></i> by <a href="#" target="_blank">{{ site.myvariable }}</a></p>
                 </div>
             </div>
         </div>
